--- a/leistungen.html
+++ b/leistungen.html
@@ -26,7 +26,7 @@
     <header>
         <div class="container">
             <nav>
-                <a href="index.html" class="logo">General Isolierungen GmbH</a>
+                <a href="index.html" class="logo">Generalisol</a>
                 <ul class="nav-links">
                     <li><a href="index.html">Startseite</a></li>
                     <li><a href="leistungen.html">Leistungen</a></li>
