--- a/kontakt.html
+++ b/kontakt.html
@@ -10,7 +10,15 @@
         body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; line-height: 1.6; color: #1a1a1a; }
         .container { max-width: 1200px; margin: 0 auto; padding: 0 1rem; }
         header { background: white; border-bottom: 1px solid #f3f4f6; padding: 1rem 0; }
-        nav { display: flex; justify-content: space-between; align-items: center; }
+        nav { 
+            display: flex; 
+            justify-content: space-between; 
+            align-items: center; 
+            width: 100%;
+            height: 4rem;
+            padding: 0 1rem;
+        }
+        .container { width: 100%; }
         .logo { font-size: 1.5rem; font-weight: 700; color: #1a1a1a; text-decoration: none; }
         .nav-links { display: flex; gap: 2rem; list-style: none; }
         .nav-links a { text-decoration: none; color: #666; transition: color 0.3s; }
