--- a/leistungen.html
+++ b/leistungen.html
@@ -35,6 +35,7 @@
         <div class="container">
             <nav>
                 <a href="index.html" class="logo">Generalisol</a>
+                <button class="mobile-menu-btn" id="mobileMenuBtn">☰</button>
                 <ul class="nav-links">
                     <li><a href="index.html">Startseite</a></li>
                     <li><a href="leistungen.html">Leistungen</a></li>
