--- a/ueber-uns.html
+++ b/ueber-uns.html
@@ -38,7 +38,7 @@
     <header>
         <div class="container">
             <nav>
-                <a href="index.html" class="logo">Generalisol</a>
+                <a href="index.html" class="logo">Generalisol</a><button class="mobile-menu-btn" id="mobileMenuBtn">☰</button>
                 <ul class="nav-links">
                     <li><a href="index.html">Startseite</a></li>
                     <li><a href="leistungen.html">Leistungen</a></li>
