✅ DESKTOP HEADER FINALISIERT: Hamburger Menu versteckt
🔧 FINALE HEADER REPARATUR:
✅ Desktop: Logo links, Navigation center, Hamburger versteckt
✅ Mobile: Logo links, Hamburger rechts, Navigation versteckt
✅ Responsive Breakpoint: @media (min-width: 769px)
✅ Proper gap spacing für clean layout

HEADER LAYOUT 100% KORREKT!

--- a/index.html
+++ b/index.html
@@ -55,16 +55,17 @@
         
         @media (min-width: 769px) {
             .nav-container {
-                justify-content: flex-start;
+                justify-content: space-between;
                 gap: 2rem;
             }
             .logo-container {
                 flex-shrink: 0;
             }
             .nav-menu {
-                display: flex;
+                display: flex !important;
                 flex: 1;
                 justify-content: center;
+                gap: 2rem;
             }
             .mobile-menu-btn {
                 display: none !important;
