🏗️ Projekt-Architektur: Professionelle CSS-Modularisierung & Asset-Organisation

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <meta property="og:description" content="Ihr Spezialist für Isolierungen von Sanitäranlagen, Lüftungs- und Heizungssystemen in Wollerau. Maßgeschneiderte und energieeffiziente Dämmungslösungen für Ihr Gebäude."/>
     <meta property="og:url" content="https://www.generalisol.ch"/>
     
+    <!-- CSS Variables -->
+    <link rel="stylesheet" href="assets/css/variables.css">
+
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
 
@@ -547,33 +550,7 @@
            With Glassmorphism, Animations & Modern CSS
            ============================================ */
 
-        /* CSS Custom Properties for Theming */
-        :root {
-            --footer-bg-primary: #2d1f3d;
-            --footer-bg-secondary: #4a3254;
-            --footer-bg-tertiary: #5d4a6b;
-            --footer-accent-warm: #f59e0b;
-            --footer-accent-gold: #fbbf24;
-            --footer-accent-rose: #fb7185;
-            --footer-accent-peach: #fda4af;
-            --footer-accent-blue: #93c5fd;
-            --footer-text-primary: #ffffff;
-            --footer-text-secondary: rgba(255, 255, 255, 0.9);
-            --footer-text-muted: rgba(255, 255, 255, 0.7);
-            --footer-glass-bg: rgba(255, 255, 255, 0.12);
-            --footer-glass-border: rgba(255, 255, 255, 0.2);
-            --footer-glow-warm: rgba(251, 113, 133, 0.35);
-            --footer-glow-peach: rgba(253, 164, 175, 0.25);
-            --footer-transition: cubic-bezier(0.4, 0, 0.2, 1);
-        }
-
-        /* Dark Mode Variables */
-        [data-theme="dark"] {
-            --footer-bg-primary: #1f1428;
-            --footer-bg-secondary: #2d1f3d;
-            --footer-glass-bg: rgba(255, 255, 255, 0.08);
-            --footer-glass-border: rgba(255, 255, 255, 0.12);
-        }
+        /* CSS Variables loaded from assets/css/variables.css */
 
         footer {
             --animate-duration: 0.4s;
