🎨 Mobile Experience Optimization v2.0
Comprehensive mobile optimization for all HTML pages:

✨ Features:
- Mobile-first CSS architecture with CSS custom properties
- Animated hamburger menu (transforms to X)
- Slide-in mobile menu panel with backdrop overlay
- Touch-optimized interactions (44px+ targets)
- Form enhancements (iOS zoom prevention)
- Lazy loading with Intersection Observer fallback
- Performance monitoring for Core Web Vitals
- Safe area insets for notched devices
- Reduced motion preference support

📁 New Files:
- src/css/mobile/mobile-experience.css
- src/css/mobile/mobile-nav-styles.css
- src/js/mobile-experience.js
- src/includes/header.html (component)
- MOBILE-OPTIMIZATION-REPORT.md

🔧 Updated:
- index.html, kontakt.html, leistungen.html, ueber-uns.html
- src/includes/footer.html

🎯 Performance targets: LCP <2.5s, FID <100ms, CLS <0.1

--- a/index.html
+++ b/index.html
@@ -2424,6 +2424,8 @@
         ]
     }
     </script>
+    <!-- Mobile Experience CSS -->
+    <link rel="stylesheet" href="src/css/mobile/mobile-experience.css"/>
 </head>
 <body>
 
@@ -3272,5 +3274,7 @@ document.addEventListener('DOMContentLoaded', function() {
 <!-- Performance & UI Enhancement Script -->
 <script src="src/js/performance-enhancements.js" defer></script>
 
+    <!-- Mobile Experience JavaScript -->
+    <script src="src/js/mobile-experience.js" defer></script>
 </body>
 </html>
