--- a/kontakt.html
+++ b/kontakt.html
@@ -868,6 +868,8 @@
             }
         }
     </style>
+    <!-- Mobile Experience CSS -->
+    <link rel="stylesheet" href="src/css/mobile/mobile-experience.css"/>
 </head>
 <body>
 
@@ -1327,5 +1329,7 @@ document.addEventListener('DOMContentLoaded', function() {
 });
 </script>
 
+    <!-- Mobile Experience JavaScript -->
+    <script src="src/js/mobile-experience.js" defer></script>
 </body>
 </html>
