--- a/leistungen.html
+++ b/leistungen.html
@@ -540,6 +540,8 @@
             }
         }
     </style>
+    <!-- Mobile Experience CSS -->
+    <link rel="stylesheet" href="src/css/mobile/mobile-experience.css"/>
 </head>
 <body>
 
@@ -834,5 +836,7 @@ document.addEventListener('DOMContentLoaded', function() {
 });
 </script>
 
+    <!-- Mobile Experience JavaScript -->
+    <script src="src/js/mobile-experience.js" defer></script>
 </body>
 </html>
